<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>hzg.wpn</groupId>
    <artifactId>WebCamServer</artifactId>
    <description>A simple tango server for web cams</description>
    <version>1.0.1</version>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>jmf</artifactId>
            <version>2.1.1e</version>
            <systemPath>${project.basedir}/lib/jmf.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>com.inliteresearch</groupId>
            <artifactId>ClearImageJNI</artifactId>
            <version>0</version>
            <systemPath>${project.basedir}/lib/ClearImageJNI.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>com.ezjcom</groupId>
            <artifactId>ezjcom</artifactId>
            <version>1.8</version>
            <systemPath>${project.basedir}/lib/ezjcom18.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>org.tango</groupId>
            <artifactId>JTangoServer</artifactId>
            <version>0.0.29</version>
            <systemPath>${project.basedir}/lib/JTangoServer-0.0.29-all.jar</systemPath>
            <scope>system</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>WebCamServer-${version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>jar-distribution</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>src/main/assembly/distr.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>

            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <argLine>-Xmx1050m -XX:MaxPermSize=128M</argLine>
                    <excludes>
                        <exclude>**/IT*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>integration-test</phase>
                        <configuration>
                            <excludes>
                                <exclude>none</exclude>
                            </excludes>
                            <includes>
                                <include>**/IT*</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <id>generate-test-sources</id>
                        <!-- <phase>package</phase>-->
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/test-integration/java</source>
                            </sources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate-test-resources</id>
                        <!-- <phase>package</phase>-->
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>add-test-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>src/test-integration/resources</directory>
                                </resource>
                                <resource>
                                    <directory>src/main/resources</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
</project>